# tree-sitter-yang

./: .editorconfig  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: publish.yml  rust.yml
bindings/c/: tree-sitter-yang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterYang/: yang.h
bindings/swift/TreeSitterYangTests/: TreeSitterYangTests.swift
src/: .clang-format  .clangd  grammar.json  node-types.json  parser.c  scanner.c
tests/: 000_module.rs  001_submodule.rs  002_comment.rs  003_yang_version.rs  004_namespace.rs  005_revision.rs  006_import.rs  007_include.rs  008_extension.rs  009_feature.rs  010_identity.rs  011_typedef.rs  012_range.rs  013_string.rs  014_enum.rs  015_leafref.rs  016_bits.rs  017_grouping.rs  018_leaf.rs  019_leaf_list.rs  020_container.rs  021_list.rs  022_choice_case.rs  023_anydata.rs  024_anyxml.rs  025_uses.rs  026_augment.rs  027_rpc.rs  028_action.rs  029_notification.rs  030_deviation.rs  031_unknown.rs  032_ietf_interfaces.rs  033_stmt_arg.rs  test_utils.rs
